--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@ use-site-title: true
 ---
 
 <h3>Short Bio</h3>
-<p>Chong Zhou is a Master student from the Department of Computer Science at the University of California, Davis, advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a>. 
-  Prior to that, he completed his Bachelor's degree in Software Engineering from Nankai University, advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
-  Chong is broadly interested in Computer Vision and related problems in Machine Learning.</p>
+<p>
+  I'm a Master student from the Department of Computer Science at the University of California, Davis, advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a>.
+</p> 
+<p>
+  Prior to that, I completed my Bachelor's degree in Software Engineering from Nankai University, advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
+</p>
+<p>
+  I'm broadly interested in Computer Vision and related problems in Machine Learning.
+</p>
+
+<h3>News</h3>
+<ul>
+  <li><p>10/2019: Our real-time instance segmentation method, <a href="https://github.com/dbolya/yolact">YOLACT</a>, won the "most innovative award" at the <a href="http://cocodataset.org/workshop/coco-mapillary-iccv-2019.html">COCO Object Detection Challenge</a>, <b>ICCV 2019</b></p></li>
+  <li><p>7/2019: 1 paper accepted to <b>ICCV 2019</b> as <font color="#339999">oral presentation</font>.</p></li>
+</ul>
