--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi there, I'm Chong Zhou
-subtitle: Master student in Computer Vision
+subtitle: Master's student in Computer Vision
 use-site-title: true
 ---
 
@@ -24,9 +24,9 @@ use-site-title: true
 
 
 <h3>Publications</h3>
-<h4>
+<h3>
   <a name='2019'></a> 2019
-</h4>
+</h3>
 <div class="media">
   <div class="media-body">
      <p class="media-heading">
