--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi there, I'm Chong Zhou
-subtitle: Master's student in Computer Vision<br /><a href="http://chongzhou96.github.io">CV</a><a href="http://chongzhou96.github.io">Google Scholar</a>
+subtitle: Master's student in Computer Vision
 use-site-title: true
 ---
 
