--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ use-site-title: true
   Prior to that, I completed my Bachelor's degree in Software Engineering from Nankai University, advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
 </p>
 <p>
-  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b> and <b>object detection</b>.
+  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, and <b>audio-visual representation learning</b>.
 </p>
 
 <h3>News</h3>
