--- a/index.html
+++ b/index.html
@@ -13,26 +13,17 @@ use-site-title: true
   Prior to that, I completed my Bachelor's degree in Software Engineering from Nankai University, advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
 </p>
 <p>
-  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, and <b>audio-visual representation learning</b>.
+  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, <b>audio-visual representation learning</b>, and <b>pedestrian detection</b>.
 </p>
 
 <h3>News</h3>
 <ul>
+  <li><p>7/2020: 1 paper accepted to <b>TPAMI 2020</b> and 1 paper accepted to <b>ACM MM</b>.</p></li>
   <li><p>10/2019: Our real-time instance segmentation method, <a href="https://github.com/dbolya/yolact">YOLACT</a>, won the "most innovative award" at the <a href="http://cocodataset.org/workshop/coco-mapillary-iccv-2019.html">COCO Object Detection Challenge</a>, <b>ICCV 2019</b></p></li>
   <li><p>7/2019: 1 paper accepted to <b>ICCV 2019</b> as <font color="#339999">oral presentation</font>.</p></li>
 </ul>
 
-<h3>Preprints</h3>
-<div class="media">
-  <div class="media-body">
-     <p class="media-heading">
-          <strong> YOLACT++: Better Real-time Instance Segmentation</strong><br />
-          Daniel Bolya*,  <b>Chong Zhou*</b>, Fanyi Xiao, Yong Jae Lee<br />
-          arXiv 2019<br />
-          <a href="https://arxiv.org/abs/1912.06218">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br />
-     </p>
-  </div>
-</div>
+<!-- <h3>Preprints</h3> -->
 <h3>Publications</h3>
 <div class="media">
   <div class="media-body">
@@ -42,6 +33,26 @@ use-site-title: true
           IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 (<font color="#339999">oral presentation</font>)<br />
           <font color="#ff0000">Most Innovative Award, COCO Object Detection Challenge, ICCV 2019</font><br />
           <a href="https://arxiv.org/abs/1904.02689">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br />
+     </p>
+  </div>
+</div>
+<div class="media">
+  <div class="media-body">
+     <p class="media-heading">
+          <strong> YOLACT++: Better Real-time Instance Segmentation</strong><br />
+          Daniel Bolya*,  <b>Chong Zhou*</b>, Fanyi Xiao, Yong Jae Lee<br />
+          TPAMI 2020<br />
+          <a href="https://arxiv.org/abs/1912.06218">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br />
+     </p>
+  </div>
+</div>
+<div class="media">
+  <div class="media-body">
+     <p class="media-heading">
+          <strong> NON-NMS: Improving Pedestrian Detection by Nearby Objects Hallucination</strong><br />
+          Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Xiaowei Guo<br />
+          ACM MM 2020<br />
+          <!-- <a href="https://arxiv.org/abs/1912.06218">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br /> -->
      </p>
   </div>
 </div>
