Update short bio and website description

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 layout: page
 title: Hi there, I'm Chong Zhou
-subtitle: Master's student in Computer Vision
+subtitle: Ph.D. student in Computer Vision
 use-site-title: true
 ---
 
 <h3>Short Bio</h3>
 <p>
-  I'm a Master's student from the Department of Computer Science at the University of California, Davis, advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a>.
+  I'll join UNC-Chapel Hill as a Ph.D. student from 2020 fall. And currently, I'm a research intern in the Tencent Youtu Lab.
 </p> 
 <p>
-  Prior to that, I completed my Bachelor's degree in Software Engineering from Nankai University, advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
+  Prior to that, I completed my Master's degree from UC Davis advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
 </p>
 <p>
-  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, <b>audio-visual representation learning</b>, and <b>pedestrian detection</b>.
+  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, <b>pedestrian detection</b>, <b>audio-visual representation learning</b>.
 </p>
 
 <h3>News</h3>
@@ -52,6 +52,7 @@ use-site-title: true
           <strong> NON-NMS: Improving Pedestrian Detection by Nearby Objects Hallucination</strong><br />
           Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Xiaowei Guo<br />
           ACM MM 2020<br />
+          <a href="https://arxiv.org/abs/2007.13376">[arXiv]</a>
           <!-- <a href="https://arxiv.org/abs/1912.06218">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br /> -->
      </p>
   </div>
