Disable website title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Hi there, I'm Chong Zhou
 subtitle: Ph.D. student in Computer Vision
-use-site-title: true
+use-site-title: false
 ---
 
 <h3>Short Bio</h3>
