--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ use-site-title: false
 
 <h3>News</h3>
 <ul>
-  <li><p>7/2020: 1 paper accepted to <b>TPAMI 2020</b> and 1 paper accepted to <b>ACM MM</b>.</p></li>
+  <li><p>7/2020: 1 paper accepted to <b>TPAMI 2020</b> and 1 paper accepted to <b>ACM MM 2020</b>.</p></li>
   <li><p>10/2019: Our real-time instance segmentation method, <a href="https://github.com/dbolya/yolact">YOLACT</a>, won the "most innovative award" at the <a href="http://cocodataset.org/workshop/coco-mapillary-iccv-2019.html">COCO Object Detection Challenge</a>, <b>ICCV 2019</b></p></li>
   <li><p>7/2019: 1 paper accepted to <b>ICCV 2019</b> as <font color="#339999">oral presentation</font>.</p></li>
 </ul>
