update NOH-NMS authors

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ use-site-title: false
   <div class="media-body">
      <p class="media-heading">
           <strong> NON-NMS: Improving Pedestrian Detection by Nearby Objects Hallucination</strong><br />
-          Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Xiaowei Guo<br />
+          Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Junlong Du, Xing Sun, Xiaowei Guo, Feiyue Huang<br />
           ACM MM 2020<br />
           <a href="https://arxiv.org/abs/2007.13376">[arXiv]</a>
           <!-- <a href="https://arxiv.org/abs/1912.06218">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br /> -->
