remove hi there

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Hi there, I'm Chong Zhou
+title: Chong Zhou
 subtitle: Ph.D. student in Computer Vision
 use-site-title: false
 ---
