--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ use-site-title: false
 
 <h3>Short Bio</h3>
 <p>
-  I'll join UNC-Chapel Hill as a Ph.D. student from 2020 fall. And currently, I'm a research intern in the Tencent Youtu Lab.
+  I'll join UNC-Chapel Hill as a Ph.D. student from 2021 spring. And currently, I'm a research intern in the Tencent Youtu Lab.
 </p> 
 <p>
   Prior to that, I completed my Master's degree from UC Davis advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
