Update research interest

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ use-site-title: false
   Prior to that, I completed my Master's degree from UC Davis advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
 </p>
 <p>
-  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, <b>pedestrian detection</b>, <b>audio-visual representation learning</b>.
+  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, and <b>pedestrian detection</b>.
 </p>
 
 <h3>News</h3>
