--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
 title: Chong Zhou
-subtitle: Ph.D. student in Computer Vision
+subtitle: Master's in Computer Vision
 use-site-title: false
 ---
 
 <h3>Short Bio</h3>
 <p>
-  I'll join UNC-Chapel Hill as a Ph.D. student from 2021 spring. And currently, I'm a research intern in the Tencent Youtu Lab.
+  I'm a research intern in the Tencent Youtu Lab and <font color="#ff0000"><b> I'm looking for Ph.D. positions starting from 2021. </b></font>
 </p> 
 <p>
   Prior to that, I completed my Master's degree from UC Davis advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
