Update research interest & remove UNC from CV

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ use-site-title: false
   Prior to that, I completed my Master's degree from UC Davis advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
 </p>
 <p>
-  I'm broadly interested in Computer Vision and related problems in Machine Learning. And my current research is focused on <b>instance segmentation</b>, <b>object detection</b>, and <b>pedestrian detection</b>.
+  I am broadly interested in computer vision and related problems in machine learning. My research experience is focused on <b>instance segmentation</b>, <b>object detection</b>, and <b>pedestrian detection</b>. Currently, I'm particularly interested in <b>self-supervised learning</b>.
 </p>
 
 <h3>News</h3>
 <ul>
   <li><p>10/2020: YOLACT is integrated into <a href="https://github.com/open-mmlab/mmdetection/blob/master/configs/yolact/README.md">mmdetection</a>.</p></li>
-  <li><p>7/2020: 1 paper accepted to <b>TPAMI 2020</b> and 1 paper accepted to <b>ACM MM 2020</b>.</p></li>
+  <li><p>7/2020: 1 paper accepted to <b>TPAMI 2020</b> and 1 paper accepted to <b>ACM Multimedia 2020</b>.</p></li>
   <li><p>10/2019: Our real-time instance segmentation method, <a href="https://github.com/dbolya/yolact">YOLACT</a>, won the "most innovative award" at the <a href="http://cocodataset.org/workshop/coco-mapillary-iccv-2019.html">COCO Object Detection Challenge</a>, <b>ICCV 2019</b></p></li>
   <li><p>7/2019: 1 paper accepted to <b>ICCV 2019</b> as <font color="#339999">oral presentation</font>.</p></li>
 </ul>
@@ -42,7 +42,7 @@ use-site-title: false
      <p class="media-heading">
           <strong> YOLACT++: Better Real-time Instance Segmentation</strong><br />
           Daniel Bolya*,  <b>Chong Zhou*</b>, Fanyi Xiao, Yong Jae Lee<br />
-          TPAMI 2020<br />
+          IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020 <br />
           <a href="https://arxiv.org/abs/1912.06218">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br />
      </p>
   </div>
@@ -52,7 +52,7 @@ use-site-title: false
      <p class="media-heading">
           <strong> NON-NMS: Improving Pedestrian Detection by Nearby Objects Hallucination</strong><br />
           Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Junlong Du, Xing Sun, Xiaowei Guo, Feiyue Huang<br />
-          ACM MM 2020<br />
+          ACM International Conference on Multimedia (<strong>ACM Multimedia</strong>), 2020 <br />
           <a href="https://arxiv.org/abs/2007.13376">[arXiv]</a>
           <!-- <a href="https://arxiv.org/abs/1912.06218">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br /> -->
      </p>
