--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ use-site-title: false
 
 <h3>News</h3>
 <ul>
+  <li><p>1/2021: Our pedestrian detection method, <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">NOH-NMS</a>, won the first place at the  <a href="http://competition.baai.ac.cn/c/34/rank/timeline/68?sourceType=public">CrowdHuman Challenge, 2020</a>.</p></li>
   <li><p>10/2020: YOLACT is integrated into <a href="https://github.com/open-mmlab/mmdetection/blob/master/configs/yolact/README.md">mmdetection</a>.</p></li>
   <li><p>7/2020: 1 paper accepted to <b>TPAMI 2020</b> and 1 paper accepted to <b>ACM Multimedia 2020</b>.</p></li>
   <li><p>10/2019: Our real-time instance segmentation method, <a href="https://github.com/dbolya/yolact">YOLACT</a>, won the "most innovative award" at the <a href="http://cocodataset.org/workshop/coco-mapillary-iccv-2019.html">COCO Object Detection Challenge</a>, <b>ICCV 2019</b></p></li>
