rearrange the order of publications

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@ use-site-title: false
 <div class="media">
   <div class="media-body">
      <p class="media-heading">
-          <strong> YOLACT: Real-time Instance Segmentation</strong><br />
-          Daniel Bolya,  <b>Chong Zhou</b>, Fanyi Xiao, Yong Jae Lee<br />
-          IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 (<font color="#339999">oral presentation</font>)<br />
-          <font color="#ff0000">Most Innovative Award, COCO Object Detection Challenge, ICCV 2019</font><br />
-          <a href="https://arxiv.org/abs/1904.02689">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br />
+          <strong> NON-NMS: Improving Pedestrian Detection by Nearby Objects Hallucination</strong><br />
+          Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Junlong Du, Xing Sun, Xiaowei Guo, Feiyue Huang<br />
+          ACM International Conference on Multimedia (<strong>ACM Multimedia</strong>), 2020 <br />
+          <font color="#ff0000">First Place, CrowdHuman Challenge, 2020</font><br />
+          <a href="https://arxiv.org/abs/2007.13376">[arXiv]</a> <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">[code]</a><br />
      </p>
   </div>
 </div>
+
 <div class="media">
   <div class="media-body">
      <p class="media-heading">
@@ -48,13 +49,15 @@ use-site-title: false
      </p>
   </div>
 </div>
+
 <div class="media">
   <div class="media-body">
      <p class="media-heading">
-          <strong> NON-NMS: Improving Pedestrian Detection by Nearby Objects Hallucination</strong><br />
-          Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Junlong Du, Xing Sun, Xiaowei Guo, Feiyue Huang<br />
-          ACM International Conference on Multimedia (<strong>ACM Multimedia</strong>), 2020 <br />
-          <a href="https://arxiv.org/abs/2007.13376">[arXiv]</a> <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">[code]</a><br />
+          <strong> YOLACT: Real-time Instance Segmentation</strong><br />
+          Daniel Bolya,  <b>Chong Zhou</b>, Fanyi Xiao, Yong Jae Lee<br />
+          IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 (<font color="#339999">oral presentation</font>)<br />
+          <font color="#ff0000">Most Innovative Award, COCO Object Detection Challenge, ICCV 2019</font><br />
+          <a href="https://arxiv.org/abs/1904.02689">[arXiv]</a> <a href="https://github.com/dbolya/yolact">[code]</a><br />
      </p>
   </div>
 </div>
