--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
 title: Chong Zhou
-subtitle: Master's in Computer Vision
+subtitle: Research Intern at Tencent Youtu Lab
 use-site-title: false
 ---
 
 <h3>Short Bio</h3>
 <p>
-  I'm a research intern at the Tencent Youtu Lab.
+  I'm a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">MMLab@NTU</a> as a Ph.D. student in 2021 fall.
 </p> 
 <p>
   Prior to that, I completed my Master's degree from UC Davis advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. 
