add title for professors

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I'm a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
+			I'm a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My research focuses on instance segmentation, object detection, and pedestrian detection. Currently, I'm particularly interested in self-supervised learning.
