--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I'm a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from Nankai University advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
+			I'm a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My research focuses on instance segmentation, object detection, and pedestrian detection. Currently, I'm particularly interested in self-supervised learning.
@@ -137,7 +137,7 @@ a, a:visited { color : #0050e7; }
                 Penghao Zhou, <b>Chong Zhou</b>, Pai Peng, Junlong Du, Xing Sun, <br>Xiaowei Guo, Feiyue Huang.
                 <br>
                 <!-- <em>Computer Vision and Pattern Recognition (CVPR), 2021 <font color="#e86e14">(Oral)</font> </em> -->
-                <em> ACM International Conference on Multimedia (ACM Multimedia), 2020 </em>
+                <em> ACM International Conference on Multimedia (ACM MM), 2020 </em>
                 <br>
                 <em>First Place, <a href="http://competition.baai.ac.cn/c/34/rank/timeline/68?sourceType=public">CrowdHuman Challenge, 2020</a></em>
                 <br>
