add meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
 <meta name="keywords" content="Chong Zhou; 周冲; Computer Vision; Deep Learning; Machine Learning; University of California, Davis; UC Davis; Tencent; Nanyang Technological University; NTU; Multimedia Lab; MMLAB">
+<!-- Set meta description -->
+<meta name="description" content="I am a research intern at the Tencent Youtu Lab and I will join the MMLab@NTU as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by Prof. Yong Jae Lee and Bachelor's degree from Nankai University advised by Prof. Ming-Ming Cheng."/>
 <link rel="author" href="https://chongzhou96.github.io/">
 
 	<title>Chong Zhou's Homepage</title>
@@ -96,7 +98,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I'm a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
+			I am a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My research focuses on instance segmentation, object detection, and pedestrian detection. Currently, I'm particularly interested in self-supervised learning.
