google-site-verification

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <meta name="keywords" content="Chong Zhou; 周冲; Computer Vision; Deep Learning; Machine Learning; University of California, Davis; UC Davis; Tencent; Nanyang Technological University; NTU; Multimedia Lab; MMLAB">
 <!-- Set meta description -->
 <meta name="description" content="I am a research intern at the Tencent Youtu Lab and I will join the MMLab@NTU as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by Prof. Yong Jae Lee and Bachelor's degree from Nankai University advised by Prof. Ming-Ming Cheng."/>
+
 <link rel="author" href="https://chongzhou96.github.io/">
+<meta name="google-site-verification" content="QPcb2tZbayI4tuBQic5KL5NDabO6nRvQqqFMPwZfG0U" />
 
 	<title>Chong Zhou's Homepage</title>
 	<style>
