--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
 <!-- Set meta description -->
-<meta name="description" content="I am a research intern at the Tencent Youtu Lab and I will join the S-Lab@NTU as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by Prof. Yong Jae Lee and Bachelor's degree from Nankai University advised by Prof. Ming-Ming Cheng."/>
+<meta name="description" content="I am a research intern at the Tencent Youtu Lab and I will join the MMLab@NTU as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by Prof. Yong Jae Lee and Bachelor's degree from Nankai University advised by Prof. Ming-Ming Cheng."/>
 
 <link rel="author" href="https://chongzhou96.github.io/">
 <meta name="google-site-verification" content="QPcb2tZbayI4tuBQic5KL5NDabO6nRvQqqFMPwZfG0U" />
@@ -99,7 +99,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I am a research intern at the Tencent Youtu Lab and I will join the <a href="http://personal.ie.cuhk.edu.hk/~ccloy/team.html">S-Lab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
+			I am a research intern at the Tencent Youtu Lab and I will join the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My research focuses on instance segmentation, object detection, and pedestrian detection. Currently, I'm particularly interested in self-supervised learning.
