--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
 <!-- Set meta description -->
-<meta name="description" content="I am a research intern at the Tencent Youtu Lab and I will join the MMLab@NTU as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from UC Davis advised by Prof. Yong Jae Lee and Bachelor's degree from Nankai University advised by Prof. Ming-Ming Cheng."/>
+<meta name="description" content="I am a Ph.D. student at the MMLab@NT (2021-now). Previously, I completed my Master's degree from UC Davis (2018-2020) advised by Prof. Yong Jae Lee, and my Bachelor's degree from Nankai University (2014-2018) advised by Prof. Ming-Ming Cheng. I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021)."/>
 
 <link rel="author" href="https://chongzhou96.github.io/">
 <meta name="google-site-verification" content="QPcb2tZbayI4tuBQic5KL5NDabO6nRvQqqFMPwZfG0U" />
@@ -61,7 +61,7 @@ a, a:visited { color : #0050e7; }
 
             <br>
 
-			<!-- <p style="line-height:23px;">
+			<p style="line-height:23px;">
 				Ph.D. Student
                 <br>
                 <br>
@@ -73,9 +73,9 @@ a, a:visited { color : #0050e7; }
                 <br>
                 Email: chongzhou1024 at gmail.com
                 <br>
-			</p> -->
+			</p>
 
-            <p style="line-height:23px;">
+            <!-- <p style="line-height:23px;">
 				Research Intern
                 <br>
                 <br>
@@ -84,7 +84,7 @@ a, a:visited { color : #0050e7; }
                 <br>
                 Email: chongzhou1024 at gmail.com
                 <br>
-			</p>
+			</p> -->
 
             <br>
 
@@ -99,7 +99,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I am a research intern at the Tencent Youtu Lab and I will join the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> as a Ph.D. student in 2021 fall. Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> and Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>.
+			I am a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> (2021-now). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> (2018-2020) advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a>, and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> (2014-2018) advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a>. I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021).
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My research focuses on instance segmentation, object detection, and pedestrian detection. Currently, I'm particularly interested in self-supervised learning.
