--- a/index.html
+++ b/index.html
@@ -114,6 +114,31 @@ a, a:visited { color : #0050e7; }
         </p>
     </div>
 
+    <div class="container">
+		<h2>Preprints</h2>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/denseclip_logo.jpg" class="publogo" width="200 px">
+            <p> 
+                <strong>
+                    <a href="https://arxiv.org/abs/2112.01071">DenseCLIP: Extract Free Dense Labels from CLIP</a>
+                </strong>
+                <br>
+                <br>
+                <b>Chong Zhou</b>, Chen Change Loy, Bo Dai.
+                <br>
+                <!-- <em>Computer Vision and Pattern Recognition (CVPR), 2021 <font color="#e86e14">(Oral)</font> </em> -->
+                <em> arXiv preprint, 2021 </em>
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/2112.01071">PDF</a>
+                    <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
+                    <!-- <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">Code</a> -->
+                </span>
+            </p>
+        </div>
+    </div>
+
 	<div class="container">
 		<h2>Publications</h2>
         <br>
@@ -195,6 +220,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <br>
+    </div>
 
     <!-- <div class="container">
     	<h2>Talks</h2>
