--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ a, a:visited { color : #0050e7; }
                 <em> arXiv preprint, 2021 </em>
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/2112.01071">PDF</a>
+                    <a href="https://arxiv.org/abs/2112.01071">arXiv</a>
                     <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
-                    <!-- <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">Code</a> -->
+                    <a href="https://github.com/chongzhou96/denseclip">Code</a>
                 </span>
             </p>
         </div>
@@ -159,7 +159,7 @@ a, a:visited { color : #0050e7; }
                 <em>First Place, <a href="http://competition.baai.ac.cn/c/34/rank/timeline/68?sourceType=public">CrowdHuman Challenge, 2020</a></em>
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/2007.13376">PDF</a>
+                    <a href="https://arxiv.org/abs/2007.13376">arXiv</a>
                     <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
                     <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">Code</a>
                 </span>
@@ -184,7 +184,7 @@ a, a:visited { color : #0050e7; }
                 <em> Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2020 </em>
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/1912.06218">PDF</a>
+                    <a href="https://arxiv.org/abs/1912.06218">arXiv</a>
                     <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
                     <a href="https://github.com/dbolya/yolact">Code</a>
                 </span>
@@ -210,7 +210,7 @@ a, a:visited { color : #0050e7; }
                 <em>Most Innovative Award, <a href="http://cocodataset.org/workshop/coco-mapillary-iccv-2019.html">COCO Object Detection Challenge, 2019</a></em>
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/1904.02689">PDF</a>
+                    <a href="https://arxiv.org/abs/1904.02689">arXiv</a>
                     <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
                     <a href="https://github.com/dbolya/yolact">Code</a>
                 </span>
