add ECCV22 papers

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ a, a:visited { color : #0050e7; }
     <div class="container">
         <h2>News</h2>
         <p>
+        [2022-07] 2 papers accepted to ECCV 2022.
+        <br>
+        <br>
         [2021-01] Our pedestrian detection method, <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">NOH-NMS</a>, won the first place at the  <a href="http://competition.baai.ac.cn/c/34/rank/timeline/68?sourceType=public">CrowdHuman Challenge, 2020</a>.
         <br>
         <br>
@@ -114,33 +117,62 @@ a, a:visited { color : #0050e7; }
         </p>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
 		<h2>Preprints</h2>
         <br>
+    </div> -->
+
+	<div class="container">
+		<h2>Publications</h2>
+        <br>
         <div class="publication">
-            <img src="./homepage_files/denseclip_logo.jpg" class="publogo" width="200 px">
+            <img src="./homepage_files/maskclip_logo.jpg" class="publogo" width="200 px">
             <p> 
                 <strong>
-                    <a href="https://arxiv.org/abs/2112.01071">DenseCLIP: Extract Free Dense Labels from CLIP</a>
+                    <a href="https://arxiv.org/abs/2112.01071">Extract Free Dense Labels from CLIP</a>
                 </strong>
                 <br>
                 <br>
                 <b>Chong Zhou</b>, Chen Change Loy, Bo Dai.
                 <br>
-                <!-- <em>Computer Vision and Pattern Recognition (CVPR), 2021 <font color="#e86e14">(Oral)</font> </em> -->
-                <em> arXiv preprint, 2021 </em>
+                <em>European Conference on Computer Vision (ECCV), 2022</font> </em>
+                <!-- <em> arXiv preprint, 2021 </em> -->
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2112.01071">arXiv</a>
                     <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
-                    <a href="https://github.com/chongzhou96/denseclip">Code</a>
+                    <!-- <a href="https://github.com/chongzhou96/denseclip">Code</a> -->
                 </span>
             </p>
         </div>
-    </div>
-
-	<div class="container">
-		<h2>Publications</h2>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/pacnet_logo.png" class="publogo" width="200 px">
+            <p> 
+                <strong>
+                    <!-- <a href="https://arxiv.org/abs/2112.01071">Extract Free Dense Labels from CLIP</a> -->
+                    PAC-Net: Highlight Your Video via History Preference Modeling
+                </strong>
+                <br>
+                <br>
+                Hang Wang, Penghao Zhou, <b>Chong Zhou</b>, Zhao Zhang, Xing Sun.
+                <br>
+                <em>European Conference on Computer Vision (ECCV), 2022</font> </em>
+                <!-- <em> arXiv preprint, 2021 </em> -->
+                <!-- <br> -->
+                <!-- <span class="links"> -->
+                    <!-- <a href="https://arxiv.org/abs/2112.01071">arXiv</a> -->
+                    <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
+                    <!-- <a href="https://github.com/chongzhou96/denseclip">Code</a> -->
+                <!-- </span> -->
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
         <br>
         <!-- <h3>2021</h3> -->
         <div class="publication">
