update eccv oral

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
 <!-- Set meta description -->
-<meta name="description" content="I am a Ph.D. student at the MMLab@NT (2021-now). Previously, I completed my Master's degree from UC Davis (2018-2020) advised by Prof. Yong Jae Lee, and my Bachelor's degree from Nankai University (2014-2018) advised by Prof. Ming-Ming Cheng. I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021)."/>
+<meta name="description" content="I am a Ph.D. student at the MMLab@NTU (2021-now). Previously, I completed my Master's degree from UC Davis (2018-2020) advised by Prof. Yong Jae Lee, and my Bachelor's degree from Nankai University (2014-2018) advised by Prof. Ming-Ming Cheng. I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021)."/>
 
 <link rel="author" href="https://chongzhou96.github.io/">
 <meta name="google-site-verification" content="QPcb2tZbayI4tuBQic5KL5NDabO6nRvQqqFMPwZfG0U" />
@@ -88,7 +88,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I am a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> advised by Prof. <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy</a> and Prof. <a href="https://daibo.info/">Bo Dai</a> (2021-now). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> (2018-2020), and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a> (2014-2018). I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021).
+			I am a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> advised by Prof. <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy</a> and Dr. <a href="https://daibo.info/">Bo Dai</a> (2021-now). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> (2018-2020), and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a> (2014-2018). I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021).
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My previous research focuses on instance segmentation and pedestrian detection. Currently, I'm particularly interested in vision and language.
@@ -98,7 +98,7 @@ a, a:visited { color : #0050e7; }
     <div class="container">
         <h2>News</h2>
         <p>
-        [2022-07] 2 papers accepted to ECCV 2022.
+        [2022-07] 2 papers accepted to ECCV 2022 (1 oral).
         <br>
         <br>
         [2021-01] Our pedestrian detection method, <a href="https://github.com/TencentYoutuResearch/PedestrianDetection-NohNMS">NOH-NMS</a>, won the first place at the  <a href="http://competition.baai.ac.cn/c/34/rank/timeline/68?sourceType=public">CrowdHuman Challenge, 2020</a>.
@@ -135,7 +135,7 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <b>Chong Zhou</b>, Chen Change Loy, Bo Dai.
                 <br>
-                <em>European Conference on Computer Vision (ECCV), 2022</font> </em>
+                <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em>
                 <!-- <em> arXiv preprint, 2021 </em> -->
                 <br>
                 <span class="links">
@@ -160,7 +160,7 @@ a, a:visited { color : #0050e7; }
                 <br>
                 Hang Wang, Penghao Zhou, <b>Chong Zhou</b>, Zhao Zhang, Xing Sun.
                 <br>
-                <em>European Conference on Computer Vision (ECCV), 2022</font> </em>
+                <em>European Conference on Computer Vision (ECCV), 2022 </em>
                 <!-- <em> arXiv preprint, 2021 </em> -->
                 <!-- <br> -->
                 <!-- <span class="links"> -->
