--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2112.01071">arXiv</a>
-                    <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
+                    <a href="https://www.mmlab-ntu.com/project/maskclip/index.html">Project Page</a>
                     <a href="https://github.com/chongzhou96/MaskCLIP">Code</a>
                 </span>
             </p>
