add PDF link for PAC-Net

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@ a, a:visited { color : #0050e7; }
             <img src="./homepage_files/pacnet_logo.png" class="publogo" width="200 px">
             <p> 
                 <strong>
-                    <!-- <a href="https://arxiv.org/abs/2112.01071">Extract Free Dense Labels from CLIP</a> -->
-                    PAC-Net: Highlight Your Video via History Preference Modeling
+                    <a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136940602.pdf">PAC-Net: Highlight Your Video via History Preference Modeling</a>
                 </strong>
                 <br>
                 <br>
@@ -162,12 +161,10 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <em>European Conference on Computer Vision (ECCV), 2022 </em>
                 <!-- <em> arXiv preprint, 2021 </em> -->
-                <!-- <br> -->
-                <!-- <span class="links"> -->
-                    <!-- <a href="https://arxiv.org/abs/2112.01071">arXiv</a> -->
-                    <!-- <a href="https://yinanhe.github.io/projects/forgerynet.html">Project Page</a> -->
-                    <!-- <a href="https://github.com/chongzhou96/denseclip">Code</a> -->
-                <!-- </span> -->
+                <br>
+                <span class="links">
+                    <a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136940602.pdf">PDF</a>
+                </span>
             </p>
         </div>
         <br>
