--- a/index.html
+++ b/index.html
@@ -121,6 +121,34 @@ a, a:visited { color : #0050e7; }
 		<h2>Preprints</h2>
         <br>
         <div class="publication">
+            <img src="./homepage_files/edgesam_logo.jpeg" class="publogo" width="200 px">
+            <p>
+                <strong>
+<!--                    <a href="https://arxiv.org/abs/">EdgeSAM: Prompt-In-the-Loop Distillation for On-Device Deployment of SAM</a>-->
+                    EdgeSAM: Prompt-In-the-Loop Distillation for On-Device Deployment of SAM
+                </strong>
+                <br>
+                <br>
+                <b>Chong Zhou</b>, Xiangtai Li, Chen Change Loy*, Bo Dai.
+                <br>(*corresponding author)
+                <br>
+                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
+                <em> arXiv preprint, 2023 </em>
+                <br>
+                <span class="links">
+<!--                    <a href="https://arxiv.org/abs/2309.10713">arXiv</a>-->
+                     <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
+                     <a href="https://github.com/chongzhou96/EdgeSAM">Code</a>
+                     <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a>
+                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a>
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
             <img src="./homepage_files/unify_logo.png" class="publogo" width="200 px">
             <p> 
                 <strong>
